--- a/CycloneStudio/CycloneStudio.csproj
+++ b/CycloneStudio/CycloneStudio.csproj
@@ -71,12 +71,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="ChooseWindow.xaml.cs">
+      <DependentUpon>ChooseWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="EntryWindow.xaml.cs">
       <DependentUpon>EntryWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="InputDialog.xaml.cs">
       <DependentUpon>InputDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PreviewWindow.xaml.cs">
+      <DependentUpon>PreviewWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="structs\BoardInfo.cs" />
     <Compile Include="structs\LoadWindowProjects.cs" />
     <Compile Include="structs\MenuData.cs" />
     <Compile Include="structs\Module.cs" />
@@ -84,6 +91,10 @@
     <Compile Include="structs\PolylineTagData.cs" />
     <Compile Include="structs\FileControler.cs" />
     <Compile Include="structs\SaveDataContainer.cs" />
+    <Page Include="ChooseWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="EntryWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -104,6 +115,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="PreviewWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -277,6 +292,15 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="graphics\save.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="graphics\DE0nano.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="graphics\stormIV.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="graphics\more.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
