build and upload

--- a/CycloneStudio/CycloneStudio.csproj
+++ b/CycloneStudio/CycloneStudio.csproj
@@ -14,6 +14,7 @@
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -26,7 +27,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -77,6 +77,9 @@
     <Compile Include="EntryWindow.xaml.cs">
       <DependentUpon>EntryWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FileChooserWindow.xaml.cs">
+      <DependentUpon>FileChooserWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="InputDialog.xaml.cs">
       <DependentUpon>InputDialog.xaml</DependentUpon>
     </Compile>
@@ -96,6 +99,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="EntryWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="FileChooserWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -260,6 +267,11 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+    <None Include="scripts\DE0-Nano_TEMP\build.bat" />
+    <None Include="scripts\DE0-Nano_TEMP\DE0Nano.qpf" />
+    <None Include="scripts\DE0-Nano_TEMP\DE0Nano.qsf" />
+    <None Include="scripts\DE0-Nano_TEMP\DE0Nano.qws" />
+    <None Include="scripts\DE0-Nano_TEMP\upload.bat" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -267,6 +279,7 @@
   <ItemGroup>
     <Folder Include="components\comb\" />
     <Folder Include="components\sec\" />
+    <Folder Include="scripts\StormIV-E6_TEMP\" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
